# Ledgerlens

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  app.py  compose.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
assets/branding/: README.md
docs/: ANALYTICS_DEFINITIONS.md  ARCHITECTURE.md  BRANDING.md  BUILD_WEEK_CHANGELOG.md  DEMO_SCRIPT.md  DEVPOST_SUBMISSION_DRAFT.md  DOCKER_HUB_DESCRIPTION.md  JUDGE_INSTRUCTIONS.md  OPENAI_INTEGRATION.md  P0_VERIFICATION.md  PREEXISTING_BASELINE.md  SECURITY_CVE_ACKNOWLEDGEMENT.md  SUBMISSION_CHECKLIST.md  TESTING.md  UI_IMPLEMENTATION.md
ledgerlens/: __init__.py  config.py
ledgerlens/ai/: __init__.py  invoice_extractor.py  openai_client.py
ledgerlens/analysts/: __init__.py  daily.py  guardrails.py  narrator.py  weekly.py
ledgerlens/analytics/: __init__.py  portfolio_dashboard.py  portfolio_intelligence.py  portfolio_metrics.py
ledgerlens/data/: portfolio_repository.py
ledgerlens/domain/: __init__.py  models.py
ledgerlens/invoices/: __init__.py  confirmation.py  models.py  (+1 more)
sample_data/: __init__.py  demo_data.py  invoice_catalog.py
scripts/: __init__.py  generate_synthetic_invoice.py  validate_openai_live.py
tests/: test_analysts.py  test_config.py  test_invoice_extraction.py  test_pdf_validation.py  test_portfolio_dashboard.py  test_portfolio_intelligence.py  test_portfolio_metrics.py  test_project_boundaries.py  test_repository.py  test_ui_charts.py  test_ui_components.py  test_ui_history.py  test_ui_project.py  test_ui_request_state.py  test_ui_view_models.py
(+12 files in other folders)
