[project]
name = "ledgerlens"
version = "0.1.0"
description = "AI-assisted, human-verified portfolio ledger for synthetic CLP portfolios."
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

